Created new file for kardium case study

--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
                     <h1 class="about-page">Luke is (not) a gamer, photography nerd, cat owner, anime enjoyer and music enthusiast, <a href="index.html" class="in-text-link about-page" id="banner-text"> by night.</a></h1>
                 </div>
                 <div class="right-banner">
-                    <p class="about-page">Currently playing Xenoblade Chronicles 3, Yakuza series and Honkai Star Rail</p>
-                    <p class="about-page">Listening to Citypop, J-pop and other random genres</p>
+                    <p class="about-page">Currently playing Xenoblade Chronicles X, Yakuza series and Zenless Zone Zero</p>
+                    <p class="about-page">Listening to Citypop, French Jazz and other random genres</p>
                     <p class="about-page">Procrastinating on editing his own photos :D</p>
                 </div>
             </div>
@@ -65,11 +65,11 @@
                 <div class="about-bio right-banner">
                     <h2>A brief blurb about myself</h2>
 
-                    <p>Hi! I'm Luke and I'm a UX and Graphic Designer who believe that <span> design can be a subtle yet impactful way to craft meaningful connections between people and the world around them through blending narratives, functionalities and overall commitment to social good.</span></p>
+                    <p>Hi! I'm Luke and I'm a UX/UI and Digital Designer who believe that <span> design can be a subtle yet impactful way to craft meaningful connections between people and the world around them through blending narratives, functionalities and overall commitment to social good.</span></p>
 
-                    <p>Recently graduated from <a href="https://www.sfu.ca/siat.html" class="in-text-link" target="_blank">The School of Interactive Arts and Technology</a>, I have experience working at the <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">SFU Summer Festival</a> as their social media coordinator and graphic designer. I have also worked at <a href="https://www.fraserhealth.ca/" class="in-text-link">Fraser Health</a> as a Digital Media Communication Specialist where I designed various graphics to advocate for Indigenous Health across the lower mainland.</p>
-
-                    <p>Outside of design, you can often find me pursuing photography (<em>don't mind me just plugging my <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram here</a></em>), playing video games (My favorite game series currently are JRPGs such as Xenoblade Chronicles 3, <a href="https://infinitewealth.sega.com/" class="in-text-link" target="_blank">The Yakuza Series</a> and <a href="https://hsr.hoyoverse.com/en-us/" class="in-text-link" target="_blank">Honkai Star Rail</a>), or watching Japanese Anime (my favorite in recent time was <a href="https://anilist.co/anime/153152/Boku-no-Kokoro-no-Yabai-Yatsu/" class="in-text-link" target="_blank">The Dangers in My Heart</a>).</p>
+                    <p>Graduated from <a href="https://www.sfu.ca/siat.html" class="in-text-link" target="_blank">The School of Interactive Arts and Technology</a>, I have experience working as a UX/UI Designer at Kardium, using lean design methodologies in different projects and designing features to improve the safety of physicians. Additionally, I have previously worked at <a href="https://www.fraserhealth.ca/" class="in-text-link">Fraser Health</a> as a Digital Media Communication Specialist where I designed various graphics to advocate for Indigenous Health across the lower mainland.
+                        
+                    <p>Outside of design, you can often find me trying to learn French (J'essaie d'apprendre le Français depuis mai 2025), pursuing photography (<em>don't mind me just plugging my <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram here</a></em>), playing video games (my favorite ones are the Persona series, The Yakuza Series and more recently Wuthering Wave), or watching Japanese Anime (my favorite in recent time was <a href="https://anilist.co/anime/153152/Boku-no-Kokoro-no-Yabai-Yatsu/" class="in-text-link" target="_blank">The Dangers in My Heart</a>).</p>
                 </div>
             </div>
         </section>
