Move SFU Anime motion graphic to archive page

--- a/passion.html
+++ b/passion.html
@@ -113,22 +113,21 @@
 
         <div class="grid two-col-project-grid add-gutters">
             <figure class="project-img figure-analysis">
-                <video class="lazy js-off" width="1920" height="1080" data-src="img/otherProjects/SFUAni/Spring2021_ClubsDay.webm" src="img/otherProjects/SFUAni/Spring2021_ClubsDay_100.webp" autoplay loop playsinline muted aria-label="The Summer Festival 2019 Teaser"></video>
-                <img alt="Motion Graphic created for the SFU Anime Club's Clubs day in 2020"class="lazy js-off" src="img/otherProjects/SFUAni/Spring2021_ClubsDay_100.webp"
-                data-src="img/otherProjects/SFUAni/Spring2021_ClubsDay_400.webp"
-                data-srcset="img/otherProjects/SFUAni/Spring2021_ClubsDay_400.webp 400w,
-                             img/otherProjects/SFUAni/Spring2021_ClubsDay_600.webp 600w"
-                data-sizes="100w">
-
-                <noscript>
-                    <video src="img/otherProjects/SFUAni/Spring2021_ClubsDay.webm" autoplay loop playsinline muted aria-label="Motion Graphic created for the SFU Anime Club's Clubs day in 2020"></video> 
-                    <img src="img/otherProjects/SFUAni/Spring2021_ClubsDay_100.webp" alt="Motion Graphic created for the SFU Anime Club's Clubs day in 2020"
-                    srcset="img/otherProjects/SFUAni/Spring2021_ClubsDay_400.webp 400w,
-                            img/otherProjects/SFUAni/Spring2021_ClubsDay_600.webp 600w" 
-                    sizes="(min-width: 74rem) 50vw, 100vw"
-                    >
+                <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.webp" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"></video>
+                <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/2021_Icebreaker/Spring2021_fallback_100.webp"
+                data-src="img/2021_Icebreaker/Spring2021_fallback_400.webp"
+                data-srcset="img/2021_Icebreaker/Spring2021_fallback_400.webp 400w,
+                             img/2021_Icebreaker/Spring2021_fallback_600.webp 600w"
+                             data-sizes="100w">
+        
+                <noscript>  
+                    <video src="img/2021_Icebreaker/Spring2021.webm" autoplay loop playsinline muted width="1920" height="1080" aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"></video> 
+                    <img src="img/2021_Icebreaker/Spring2021_fallback_400.webp" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
+                         srcset="img/2021_Icebreaker/Spring2021_fallback_400.webp 400w,
+                                 img/2021_Icebreaker/Spring2021_fallback_600.webp 600w" 
+                         sizes="(min-width: 60rem) 50vw, 100vw">
                 </noscript>
-                <figcaption class="caption-analysis">Motion Graphic created for the SFU Anime Club's Clubs day in 2020</figcaption>
+                <figcaption class="caption-analysis">Motion Graphic created for the SFU Anime Club's Clubs day in 2021, <a href="icebreaker.html" class="in-text-link" target="_blank">view the project's case study here!</a></figcaption>
             </figure>
             <figure class="figure-analysis project-img static-img">
                 <img alt="DAK Coffee Website Redesign" class="lazy js-off" src="img\otherProjects/Misc/DAKMockup_100.webp"
@@ -189,8 +188,26 @@
             </figure>
         </div>
 
-        <div class="grid two-col-project-grid static-img add-gutters">
-            <figure class="figure-analysis project-img">
+        <div class="grid two-col-project-grid add-gutters">
+            <figure class="project-img figure-analysis">
+                <video class="lazy js-off" width="1920" height="1080" data-src="img/otherProjects/SFUAni/Spring2021_ClubsDay.webm" src="img/otherProjects/SFUAni/Spring2021_ClubsDay_100.webp" autoplay loop playsinline muted aria-label="The Summer Festival 2019 Teaser"></video>
+                <img alt="Motion Graphic created for the SFU Anime Club's Clubs day in 2020"class="lazy js-off" src="img/otherProjects/SFUAni/Spring2021_ClubsDay_100.webp"
+                data-src="img/otherProjects/SFUAni/Spring2021_ClubsDay_400.webp"
+                data-srcset="img/otherProjects/SFUAni/Spring2021_ClubsDay_400.webp 400w,
+                             img/otherProjects/SFUAni/Spring2021_ClubsDay_600.webp 600w"
+                data-sizes="100w">
+
+                <noscript>
+                    <video src="img/otherProjects/SFUAni/Spring2021_ClubsDay.webm" autoplay loop playsinline muted aria-label="Motion Graphic created for the SFU Anime Club's Clubs day in 2020"></video> 
+                    <img src="img/otherProjects/SFUAni/Spring2021_ClubsDay_100.webp" alt="Motion Graphic created for the SFU Anime Club's Clubs day in 2020"
+                    srcset="img/otherProjects/SFUAni/Spring2021_ClubsDay_400.webp 400w,
+                            img/otherProjects/SFUAni/Spring2021_ClubsDay_600.webp 600w" 
+                    sizes="(min-width: 74rem) 50vw, 100vw"
+                    >
+                </noscript>
+                <figcaption class="caption-analysis">Motion Graphic created for the SFU Anime Club's Clubs day in 2020</figcaption>
+            </figure>
+            <figure class="figure-analysis project-img static-img">
                 <img alt="Social Media Graphic Created for The Collaboration of the Anime Movement+ and AniToons+ Facebook page " class="lazy js-off" src="img/otherProjects/AT/AM_100.webp"
                 data-src="img/otherProjects/AT/AM_400.webp"
                 data-srcset="img/otherProjects/AT/AM_400.webp 400w,
@@ -207,25 +224,8 @@
                 </noscript>
                 <figcaption class="caption-analysis">Social Media Graphic Created for The Collaboration of the Anime Movement+ and AniToons+ Facebook page</figcaption>
             </figure>
-
-            <figure class="figure-analysis project-img">
-                <img alt="Social Media Graphic Template created for the Anime Movement+ Facebook page" class="lazy js-off" src="img/otherProjects/AT/AniQuote_100.webp"
-                data-src="img/otherProjects/AT/AniQuote_400.webp"
-                data-srcset="img/otherProjects/AT/AniQuote_400.webp 400w,
-                             img/otherProjects/AT/AniQuote_600.webp 600w,
-                             img/otherProjects/AT/AniQuote_1080.webp 1080w"
-                data-sizes="100w">
-                <noscript>
-                    <img src="img/otherProjects/AT/AniQuote_400.webp" alt="Social Media Graphic Template created for the Anime Movement+ Facebook page"
-                    srcset="img/otherProjects/AT/AniQuote_400.webp 400w,
-                            img/otherProjects/AT/AniQuote_600.webp 600w,
-                            img/otherProjects/AT/AniQuote_1080.webp 1080w" 
-                    sizes="(min-width: 74rem) 50vw, 100vw"
-                    >
-                </noscript>
-                <figcaption class="caption-analysis">Social Media Graphic Template created for the Anime Movement+ Facebook page</figcaption>
-            </figure>
         </div>
+
         <div class="grid two-col-project-grid static-img add-gutters">
             <figure class="figure-analysis project-img">
                 <img alt="Ren Graphic Poster for SFU Anime's SADtober event" class="lazy js-off" src="img/otherProjects/SFUAni/SADtoberR_100.webp"
