--- a/kardium.html
+++ b/kardium.html
@@ -110,17 +110,27 @@
             </section>
 
             <section class="project-analysis">
-                <div class="grid two-col-project-grid">
+                <div class="grid two-col-project-grid align-top">
                     <div class="text-container">
                         <h3>Rebuilding from the atoms up</h3>
                         <p>To unify the design system across both Product UX and the development team, I collaborated with a Senior UX Designer and a Staff Software Engineer to start refactoring our UX design library from the atom level in form of fonts, matching the UX’s library to the list of different font sizes and naming scheme in the software provided by developers’ team and from there, working my way up the design system, updating the buttons (molecule), dialog sections (organism) and ending with template/page in the form of a sample UI frame with all the elements from the design system.</p>
                     </div>
-                    <div class="project-quotes">
-                        <h4>"I have heard that rescued animals don’t live as long because of their trauma but I’m <span>not sure how true it is.</span>"</h4>
-                        <p>— An interviewee who previously bought his dog from a breeder</p>
-                        <h4>"Not everyone can comfortably communicate with other people but <span>with pets they can express themselves easier.</span>"</h4>
-                        <p>— An interviewee who has bought and adopted pets in the past</p>
-                    </div>
+                    <figure class="figure-analysis project-img static-img" >
+                        <img alt="Persona image of Natalie (Intended User)" class="lazy js-off" src="img\fureverhome\PersonaN_100.webp"
+                        data-src="img\fureverhome\PersonaN_400.webp"
+                        data-srcset="img\fureverhome\PersonaN_400.webp 400w,
+                                    img\fureverhome\PersonaN_800.webp 600w,
+                                    img\fureverhome\PersonaN_1080.webp 1080w"
+                        data-sizes="100w">
+                        <noscript>
+                            <img src="img\fureverhome\PersonaN_100.webp" alt="Persona image of Natalie (Intended User)"
+                            srcset="img\fureverhome\PersonaN_400.webp 400w,
+                                    img\fureverhome\PersonaN_800.webp 600w,
+                                    img\fureverhome\PersonaN_1080.webp 1080w" 
+                            sizes="(min-width: 74rem) 50vw, 100vw">
+                        </noscript>
+                        <figcaption class="caption-analysis">Persona of Natalie (Intended User)</figcaption>
+                    </figure>  
                 </div>
                 
                 <figure class="project-img static-img figure-analysis">
