Updated index text's for kardium case study and added highlight words for kardium case study

--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
                     <h1 class="about-page">Luke is (not) a gamer, photography nerd, cat owner, anime enjoyer and music enthusiast, <a href="index.html" class="in-text-link about-page" id="banner-text"> by night.</a></h1>
                 </div>
                 <div class="right-banner">
-                    <p class="about-page">Currently playing Xenoblade Chronicles X, Yakuza series and Zenless Zone Zero</p>
-                    <p class="about-page">Listening to Citypop, French Jazz and other random genres</p>
-                    <p class="about-page">Procrastinating on editing his own photos :D</p>
+                    <p class="about-page">Currently playing Xenoblade Chronicles X, Nier Replicant and Zenless Zone Zero</p>
+                    <p class="about-page">Listening to Citypop, French Jazz and other random music genres</p>
+                    <p class="about-page">Procrastinating on editing his own travel photos :D</p>
                 </div>
             </div>
         </section>
