--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
                             </div>
                         </a>
                         <div class="grid two-col-index-grid">
-                            <h3>The SFU Summer Festival</h3>
-                            <p class="project-type right-align-text">MOTION DESIGN. GRAPHIC DESIGN. SOCIAL MEDIA</p>
+                            <h3>Globe Pulse Field Design System</h3>
+                            <p class="project-type right-align-text">DESIGN SYSTEM. UX. UI</p>
                         </div>
-                        <p class="project-description">A multimedia voluntary project for The SFU Summer Festival annual convention.</p> 
+                        <p class="project-description">Building an accessible and scalable design system for designers, developers and physicians</p> 
                         <a href="summerfest.html" class="label-button">View Project →</a>
                     </div>
                     <!-- right side -->
                     <div class="project-details project-item">
-                        <a href="summerfest.html">
+                        <a href="kardium.html">
                             <div class="project-img">
                                 <figure>
                                     <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.webp" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail">
