Uploading content asset for Kardium case study

--- a/kardium.html
+++ b/kardium.html
@@ -80,7 +80,7 @@
 
                     <p>My primary role in this project involved conducting <span>design audits, ensuring accessibility compliance</span> with WCAG standards, managing the <span>design library</span>, and creating <span>guidelines for future development.</span></p>
 
-                    <p><span> NOTE: Due to NDA restrictions, this case study will only highlights the key tasks I contributed to Kardium's design system a high-level with contents blurred/replaced or left out.</span> If you'd like more details about my work, please feel free to <a href="mailto:lukedo2111@gmail.com" class="footer-link">contact me via my email!</a></p>
+                    <p><span> NOTE: Due to NDA restrictions, this case study will only highlights the key tasks I contributed to creating standard guidelines for Kardium's design system at a high-level with contents replaced or left out.</span> If you'd like more details about my work, please feel free to <a href="mailto:lukedo2111@gmail.com" class="footer-link">contact me via my email!</a></p>
                 </div>
 
                 <figure class="figure-analysis project-img static-img" >
