Updating Kardium case study with some images, more is come

--- a/fureverhome.html
+++ b/fureverhome.html
@@ -73,7 +73,7 @@
             <div class="separating-line"></div>
             <section class="project-analysis text-container" id="overview">
                 <h2>Background</h2>
-                <p>After studying the principles, and heuristics of Interface Design, FurEverHome was created in a group of four as a platform to support new and prospective rescued dog owners in their journey with their beloved furry friends. Utilizing Figma over 6 weeks, I was primarily responsible for user research and testing, creating different iterations and features of the UI as well as prototyping a fully working prototype of one of our experience flows in the application. </p>
+                <p>FurEverHome was created in a group of four as a platform to support new and prospective rescued dog owners in their journey with their beloved furry friends. Utilizing Figma over 6 weeks, I was primarily responsible for user research and testing, creating different iterations and features of the UI as well as prototyping a fully working prototype of one of our experience flows in the application. </p>
                 <a href="fureverhome.html#solution" class="label-button" id="solution-button">Jump to proposed application ↓</a>
             </section>
 
@@ -90,6 +90,7 @@
 
             <section class="project-analysis grid two-col-project-grid">
                 <div class="text-container">
+                    <h2>Jumping down the rabbit hole</h2>
                     <h3>User Interviews</h3>
                     <p>To gain a better understanding of how pet owners and pet shelters view their experience with rescued dogs and the difference between them and buying from breeders, we <span>conducted user interviews with 7 participants, each being 30 minutes long on both Zoom and in person</span>, with 4 people who adopted from breeders, 2 who adopted rescues and a volunteer from the SPCA, a local animal shelters.</p>
                     <p>These interviews pointed to the general mindset of online information being sufficient but preferred hearing stories from experienced pet owners for specific insights. Common issues faced by pet owners include health, hygiene, and behavioral concerns with their pets, while common reasons for adopting pets include companionship, a love for animals, and a desire to practice caregiving.</p>
