--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
                     <div class="project-details project-item">
                         <a href="88rising.html">
                             <div class="project-img static-img">
-                            <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\88risingMockUp_100.webp"
+                            <img alt="88rising Banner Image" class="lazy js-off" src="img\88rising\88risingMockUp_100.webp"
                             data-src="img\88rising\88risingMockUp_400.webp"
                             data-srcset="img\88rising\88risingMockUp_400.webp 400w,
                                          img\88rising\88risingMockUp_800.webp 600w,
                                          img\88rising\88risingMockUp_1080.webp 1080w"
                             data-sizes="100w">
                             <noscript>
-                                <img src="img\88rising\88risingMockUp_400.webp" alt="88rising Banner image"
+                                <img src="img\88rising\88risingMockUp_400.webp" alt="88rising Banner Image"
                                 srcset="img\88rising\88risingMockUp_400.webp 400w,
                                         img\88rising\88risingMockUp_800.webp 600w,
                                         img\88rising\88risingMockUp_1080.webp 1080w" 
@@ -87,6 +87,39 @@
                         <a href="88rising.html" class="label-button left-align-content">View Project →</a>
                     </div>
                     <!-- right side -->
+                    <div class="project-details project-item">
+                        <a href="kardium.html">
+                            <div class="project-img static-img">
+                                <img alt="Kardium Design System Thumnail Image" class="lazy js-off" src="img\kardium\KardiumThumbnail_100.webp"
+                                data-src="img\kardium\KardiumThumbnail_400.webp"
+                                data-srcset="img\kardium\KardiumThumbnail_400.webp 400w,
+                                             img\kardium\KardiumThumbnail_800.webp 600w,
+                                             img\kardium\KardiumThumbnail_1080.webp 1080w"
+                                data-sizes="100w">
+                                <noscript>
+                                    <img src="img\kardium\KardiumThumbnail_400.webp" alt="Kardium Design System Thumnail Image"
+                                    srcset="img\kardium\KardiumThumbnail_400.webp 400w,
+                                            img\kardium\KardiumThumbnail_800.webp 600w,
+                                            img\kardium\KardiumThumbnail_1080.webp 1080w" 
+                                    sizes="(min-width: 74rem) 50vw, 100vw"
+                                    >
+                                </noscript>
+                            </div>
+                        </a>
+                        <div class="grid two-col-index-grid">
+                            <h3>Globe Pulse Field Design System</h3>
+                            <p class="project-type right-align-text">DESIGN SYSTEM. UX. UI</p>
+                        </div>
+                        <p class="project-description">Building an accessible and scalable design system for designers, developers and physicians</p> 
+                        <a href="kardium.html" class="label-button">View Project →</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Second Row -->     
+            <div class="scroll-reveal container down active">
+                <div class="grid featured-project add-gutters">
+                    <!-- left side -->                     
                     <div class="project-details project-item project-img static-img">
                         <a href="fureverhome.html">
                             <img alt="FurEverHome Thumbnail image" class="lazy js-off" src="img\fureverhome\FureverhomeThumbnail_100.webp"
@@ -111,47 +144,9 @@
                         <p class="project-description">A fictional mobile application dedicated to supporting new and current rescued dog owners.</p> 
                         <a href="fureverhome.html" class="label-button">View Project →</a>
                     </div>
-                </div>
-            </div>
-
-            <!-- Second Row -->     
-            <div class="scroll-reveal container down active">
-                <div class="grid featured-project add-gutters">
-                    <!-- left side -->
-                    <div class="project-details project-item">
-                        <a href="summerfest.html">
-                            <div class="project-img">
-                                <figure>
-                                    <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.webp" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail">
-                                    </video>
-                                    <img alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail" class="lazy js-off" src="img/summerfest/SummerFest_100.webp"
-                                    data-src="img/summerfest/SummerFest_400.webp"
-                                    data-srcset="img/summerfest/SummerFest_400.webp 400w,
-                                                 img/summerfest/SummerFest_600.webp 600w"
-                                    data-sizes="100w">
-        
-                                    <noscript>
-                                        <video src="img/summerfest/poster_reveal.webm" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"></video> 
-                                    
-                                        <img src="img/summerfest/SummerFest_400.webp" alt="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"
-                                        srcset="img/summerfest/SummerFest_400.webp 400w,
-                                                img/summerfest/SummerFest_600.webp 600w" 
-                                        sizes="(min-width: 60rem) 50vw, 100vw"
-                                        >
-                                    </noscript>
-                                </figure> 
-                            </div>
-                        </a>
-                        <div class="grid two-col-index-grid">
-                            <h3>Globe Pulse Field Design System</h3>
-                            <p class="project-type right-align-text">DESIGN SYSTEM. UX. UI</p>
-                        </div>
-                        <p class="project-description">Building an accessible and scalable design system for designers, developers and physicians</p> 
-                        <a href="summerfest.html" class="label-button">View Project →</a>
-                    </div>
                     <!-- right side -->
                     <div class="project-details project-item">
-                        <a href="kardium.html">
+                        <a href="summerfest.html">
                             <div class="project-img">
                                 <figure>
                                     <video class="lazy js-off" width="1920" height="1080" data-src="img/summerfest/poster_reveal.webm" src="img/summerfest/SummerFest_100.webp" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail">
