"Finished" first draft of kardium case study
- Uploaded new content for use in kardium case study

- Minor changes to other pages to accommodate the new case study

--- a/88rising.html
+++ b/88rising.html
@@ -442,7 +442,7 @@
                     <a class="in-text-link label-button" href="index.html">← Home</a>
                 </div>
                 <div id="bottom-nav-right">
-                    <a class="right-align-text in-text-link label-button" href="fureverhome.html">Next Project: FurEverHome →</a>
+                    <a class="right-align-text in-text-link label-button" href="fureverhome.html">Next Project: Kardium Design System →</a>
                 </div>
             </section>
 
