--- a/kardium.html
+++ b/kardium.html
@@ -97,7 +97,7 @@
                                 img\kardium\GlobeSW_1080.webp 1080w" 
                         sizes="(min-width: 74rem) 50vw, 100vw">
                     </noscript>
-                    <figcaption class="caption-analysis">Persona of Natalie (Intended User)</figcaption>
+                    <figcaption class="caption-analysis">Screenshot of the Globe Software designed and developped by Kardium</figcaption>
                 </figure>  
 
             </section>
@@ -116,7 +116,7 @@
                 </div>
             </section>
 
-            <section class="project-analysis grid two-col-project-grid">
+            <section class="project-analysis grid two-col-project-grid align-top">
                 <div class="text-container">
                     <h2>A flexible design system for for both</h2>
                     <h3>Conducting Design Audits</h3>
@@ -124,45 +124,45 @@
                     <p>The audit process also involved 1:1 meetings with UX Designers, as well as meeting with UI developers from the development team to understand the process and workflow in implementing a feature after receiving the mockup specs from the UX Design team.</p>
                 </div>
                 <figure class="figure-analysis project-img static-img" >
-                    <img alt="Kardium Design System Thumnail Image" class="lazy js-off" src="img\kardium\KardiumThumbnail_100.webp"
-                         data-src="img\kardium\KardiumThumbnail_400.webp"
-                         data-srcset="img\kardium\KardiumThumbnail_400.webp 400w,
-                                      img\kardium\KardiumThumbnail_800.webp 600w,
-                                    img\kardium\KardiumThumbnail_1080.webp 1080w"
+                    <img alt="An example design audit of Kardium's Design System" class="lazy js-off" src="img\kardium\DesignAudit_100.webp"
+                         data-src="img\kardium\DesignAudit_400.webp"
+                         data-srcset="img\kardium\DesignAudit_400.webp 400w,
+                                      img\kardium\DesignAudit_800.webp 600w,
+                                      img\kardium\DesignAudit_1080.webp 1080w"
                         data-sizes="100w">
                     <noscript>
-                        <img src="img\kardium\KardiumThumbnail_400.webp" alt="Kardium Design System Thumnail Image"
-                             srcset="img\kardium\KardiumThumbnail_400.webp 400w,
-                                     img\kardium\KardiumThumbnail_800.webp 600w,
-                                     img\kardium\KardiumThumbnail_1080.webp 1080w" 
+                        <img src="img\kardium\DesignAudit_400.webp" alt="An example design audit of Kardium's Design System"
+                             srcset="img\kardium\DesignAudit_400.webp 400w,
+                                     img\kardium\DesignAudit_800.webp 600w,
+                                     img\kardium\DesignAudit_1080.webp 1080w" 
                              sizes="(min-width: 74rem) 50vw, 100vw">
                     </noscript>
-                    <figcaption class="caption-analysis">A example design audit of Kardium's Design System</figcaption>
+                    <figcaption class="caption-analysis">An example design audit of Kardium's Design System</figcaption>
                 </figure>  
             </section>
 
             <section class="project-analysis">
-                <div class="grid two-col-project-grid">
+                <div class="grid two-col-project-grid align-top">
                     <div class="text-container">
                         <h3>Rebuilding from the atoms up</h3>
                         <p>To unify the design system across both Product UX and the development team, <span>I collaborated with our Senior UX Manager and a Staff Software Engineer to start refactoring our UX design library from the atom level</span> in form of fonts, matching the UX’s library to the list of different font sizes and naming scheme in the software provided by developers’ team and from there, working my way up the design system, updating the buttons (molecule), dialog sections (organism) and ending with template/page in the form of a sample UI frame with all the elements from the design system.</p>
                     </div>
-                <figure class="figure-analysis project-img static-img" >
-                    <img alt="Kardium Design System Thumnail Image" class="lazy js-off" src="img\kardium\KardiumThumbnail_100.webp"
-                         data-src="img\kardium\KardiumThumbnail_400.webp"
-                         data-srcset="img\kardium\KardiumThumbnail_400.webp 400w,
-                                      img\kardium\KardiumThumbnail_800.webp 600w,
-                                    img\kardium\KardiumThumbnail_1080.webp 1080w"
-                        data-sizes="100w">
-                    <noscript>
-                        <img src="img\kardium\KardiumThumbnail_400.webp" alt="Kardium Design System Thumnail Image"
-                             srcset="img\kardium\KardiumThumbnail_400.webp 400w,
-                                     img\kardium\KardiumThumbnail_800.webp 600w,
-                                     img\kardium\KardiumThumbnail_1080.webp 1080w" 
-                             sizes="(min-width: 74rem) 50vw, 100vw">
-                    </noscript>
-                    <figcaption class="caption-analysis">Kardium Design System</figcaption>
-                </figure>   
+                    <figure class="figure-analysis project-img static-img" >
+                        <img alt="Meeting with Development" class="lazy js-off" src="img\kardium\Dev_100.webp"
+                            data-src="img\kardium\Dev_400.webp"
+                            data-srcset="img\kardium\Dev_400.webp 400w,
+                                         img\kardium\Dev_800.webp 600w,
+                                         img\kardium\Dev_1080.webp 1080w"
+                            data-sizes="100w">
+                        <noscript>
+                            <img src="img\kardium\Dev_400.webp" alt="Meeting with Development"
+                                srcset="img\kardium\Dev_400.webp 400w,
+                                        img\kardium\Dev_800.webp 600w,
+                                        img\kardium\Dev_1080.webp 1080w" 
+                                sizes="(min-width: 74rem) 50vw, 100vw">
+                        </noscript>
+                        <figcaption class="caption-analysis">Meeting with UI developers</figcaption>
+                    </figure>   
                 </div>
                 
                 <figure class="project-img static-img figure-analysis">
@@ -185,16 +185,28 @@
 
             </section>
 
-            <section class="project-analysis grid two-col-project-grid">
+            <section class="project-analysis grid two-col-project-grid align-top">
                 <div class="text-container">
                     <h2>Clear specs standard and faster implementation</h2>
                     <p>Before, handing off work would always meant some level of manual interpretation between designers and developers. That left room for small discrepancies and slowed down implementation.</p>
                     <p>Now with the newly unified set of design standards, the handoff process became radically simpler. <span>Every component, comes with an annotated sheet with examples, general specs, documenting supported states, and accessibility guidance. UI Developers and Product UX Designers now work from a single source of truth</span>—reducing ambiguity, eliminating redundant documentation, and accelerating time to implement features.</p>
                 </div>
-                <div class="project-quotes">
-                    <h4>"I was beginning to make too many assumptions, so I am <span>grateful for the details outlined in specifications</span> going forward."</h4>
-                    <p>— UI Software Developer</p>
-                </div>
+                    <figure class="figure-analysis project-img static-img" >
+                        <img alt="Kardium Design System Thumnail Image" class="lazy js-off" src="img\kardium\NewDesignSystem_100.webp"
+                            data-src="img\kardium\NewDesignSystem_400.webp"
+                            data-srcset="img\kardium\NewDesignSystem_400.webp 400w,
+                                        img\kardium\NewDesignSystem_800.webp 600w,
+                                        img\kardium\NewDesignSystem_1080.webp 1080w"
+                            data-sizes="100w">
+                        <noscript>
+                            <img src="img\kardium\NewDesignSystem_400.webp" alt="Kardium Design System Thumnail Image"
+                                srcset="img\kardium\NewDesignSystem_400.webp 400w,
+                                        img\kardium\NewDesignSystem_800.webp 600w,
+                                        img\kardium\NewDesignSystem_1080.webp 1080w" 
+                                sizes="(min-width: 74rem) 50vw, 100vw">
+                        </noscript>
+                        <figcaption class="caption-analysis">Kardium Design System on Figma</figcaption>
+                    </figure>
             </section>
 
             <!-- <section class="project-analysis">
@@ -225,12 +237,12 @@
             <section class="project-analysis grid two-col-project-grid">
                 <div class="text-container">
                     <h2>Reflection</h2>
-                    <p>As my first real UI/UX project that I have done in my academic career, I’m really proud of what my teammates and I were able to achieve, gaining both praise from fellow classmates and the teaching team during our final showcase. I was able to <span>learn how to efficiently prototype a fully functional prototype application using Figma's components</span>.</p>
-                    <p>I've also gained a better understanding of the importance of qualitative research and its differences from quantitative and secondary research. I also learned how to create interview questions that <span>don't lead the interviewee and encourage them to provide detailed and natural responses</span>. Furthermore, I gotten more experience of collaborating within a team when developing a mobile application, especially keeping each other informed, and most importantly working together to overcome challenges we encountered <span>basing our decisions on our research and user’s insights.</span></p>
+                    <p>The experience I gained at Kardium was invaluable in my journey as a designer as I was able to see various projects from start to finish in a real world setting. During this time, <span>I was able to polish my eye for UX/UI designs, focusing on accessibility while practicing soft skills</span>; learning how to present to stakeholders and engaging with real users while conveying concepts in an easily understood manner, synthesize insights and organizing my day-to-day in order to follow the increment cycle for development.</p>
+                    <p>While my time working at Kardium has ended, it’s quite exciting to see the <span>various features that I have designed got so many endorsements from veterans users</span> in the field and are anticipated to be rolled out to the various clinics and hospitals <span>across the US, Canada and Europe</span> in the near future!</p>
                 </div>
 
                 <div class="project-quotes">
-                    <h4>"This feature and UI is <span>brilliant! It would help us a lot in future procedures.</span>"</h4>
+                    <h4>"The feature and interface is <span>brilliant! It would help us a lot in future procedures.</span>"</h4>
                     <p>— Doctor from Royal Jubilee Hospital</p>
                     <h4><span>"I could give the person who designed this a hug!"</span></h4>
                     <p>— Senior Clinical Software Operator</p>
@@ -242,7 +254,7 @@
                     <a class="in-text-link label-button" href="index.html">← Home</a>
                 </div>
                 <div id="bottom-nav-right">
-                    <a class="right-align-text in-text-link label-button" href="summerfest.html">Next Project: The SFU Summer Festival →</a>
+                    <a class="right-align-text in-text-link label-button" href="fureverhome.html">Next Project: FurEverHome →</a>
                 </div>
             </section>
 
